--- a/app/album/album.html
+++ b/app/album/album.html
@@ -1,5 +1,5 @@
 <view-loader ng-show="$ctrl.loading"></view-loader>
-<div class="album" ng-hide="$ctrl.loading">
+<div class="album" ng-if="!$ctrl.loading">
   <h3 class="album--header">{{$ctrl.album.title}}</h3>
   <div class="album--details">{{$ctrl.photos.length}} photos</div>
   <div class="container" ng-show="$ctrl.photos.length">
